# LiUFS-AeroCFD

./: .gitignore  APP_GUIDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGING.md  README.md  REFACTOR_PLAN.md  TODO_BEFORE_RELASE.md  WORKFLOW.md  pyproject.toml  requirements.txt  run_viewer.sh  test_components.py  viewer.spec  viewer_entry.py
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  pull_request_template.md  release.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs_chore.md  feature.md
.github/workflows/: ci.yml  release-stamp-pr.yml  release.yml
0_research/: compressor.py  output.json
0_research/simulation_compressor/: __main__.py  encoder.py  packager.py  reporting.py  scanner.py
aerocfd_app/: __init__.py  __main__.py  liufs_handler.py  main.py  version.py
aerocfd_app/core/: archive_manager.py  diagnostics.py  media_loader.py  pane_manager.py  view_state.py
aerocfd_app/resources/: COPYRIGHT  LICENSE  __init__.py
aerocfd_app/ui/: __init__.py  ui_builder.py  viewer_window.py
aerocfd_app/ui/controllers/: __init__.py  pane_orchestration.py  selection_orchestration.py
aerocfd_app/ui/widgets/: help_dialog.py  panes.py
aerocfd_cli/: README.md  __main__.py  encoder.py  packager.py  reporting.py
app/: __init__.py  __main__.py  file_tree.py  liufs_handler.py  main.py  version.py  video_player.py  view_components.py
app/core/: __init__.py  archive_manager.py  export_service.py  media_loader.py
app/ui/: __init__.py  ui_builder.py  viewer_window.py
app/ui/controllers/: __init__.py  pane_orchestration.py  selection_orchestration.py
docs/: APP_GUIDE.md  ERROR_HANDLING.md  ERROR_HANDLING_SUMMARY.md  ERROR_MESSAGES_REFERENCE.md  PACKAGING.md  QUICK_START_ERROR_HANDLING.md  RELEASE_CHECKLIST.md  WORKFLOW.md
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  set_app_version.py
simulation_compressor/: README.md  __init__.py  __main__.py  encoder.py  packager.py  scanner.py
tests/: __init__.py  __main__.py  test_cli_legal_flags.py  test_components.py  test_compressor.py  test_error_handling.py  test_pane_navigation.py  test_reporting_imports.py  test_selection_orchestration.py  test_set_app_version.py  test_swap_view.py  test_viewer_add_run.py  test_viewer_shortcuts.py
tests/broken_liufs_files/: README.md  broken_runs.liufs  empty.liufs  invalid_json.liufs  invalid_run_structure.liufs  missing_fields.liufs  skipped_unknown_run.liufs  valid_minimal.liufs
