[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerocfd"
version = "1.0.1"
description = "Package CFD simulation folders into compressed .liufs archives with video-encoded cutplanes"
readme = "aerocfd_cli/README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    {name = "LiU Formula Student"},
]
keywords = ["cfd", "simulation", "compression", "packaging", "video", "liufs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video",
]

dependencies = []

[project.optional-dependencies]
cli = [
    "opencv-python>=4.8.0",
    "rich>=13.0.0",
]
app = [
    "opencv-python>=4.8.0",
    "PySide6>=6.11.0",
]
full = [
    "opencv-python>=4.8.0",
    "rich>=13.0.0",
    "PySide6>=6.11.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
aerocfd = "aerocfd_cli.__main__:main"
aerocfd-app = "aerocfd_app.main:main"

[project.urls]
Homepage = "https://github.com/LiU-Formula-Student/LiUFS-AeroCFD"
Repository = "https://github.com/LiU-Formula-Student/LiUFS-AeroCFD"
Documentation = "https://github.com/LiU-Formula-Student/LiUFS-AeroCFD#aerocfd_cli"
Issues = "https://github.com/LiU-Formula-Student/LiUFS-AeroCFD/issues"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["aerocfd_cli*", "aerocfd_app*"]

[tool.setuptools.package-data]
aerocfd_app = ["resources/*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I"]
